--- a/i18n/es.yaml
+++ b/i18n/es.yaml
@@ -16,3 +16,6 @@ photoCount:
 albumCount:
   one: "{{ .photoCount }} en {{ .count }} álbum"
   other: "{{ .photoCount }} en {{ .count }} álbumes"
+articleAboutMe: Sobre mí
+articleAboutMeDescription: Ingeniero multimedia, apasionado por el arte
+articleIndexContent: Contenido
