languae buttons (WIP, needs CSS style)

--- a/i18n/en.yaml
+++ b/i18n/en.yaml
@@ -24,4 +24,4 @@ articlesCount:
 minutesCount:
   one: 1 min
   other: "{{ . }} mins"
-articleImgAlt: Cover image of the article '{.}'
+articleImgAlt: Cover image of the article '{{ . }}'
