--- a/i18n/en.yaml
+++ b/i18n/en.yaml
@@ -25,3 +25,4 @@ minutesCount:
   one: 1 min
   other: "{{ . }} mins"
 articleImgAlt: Cover image of the article '{{ . }}'
+goBack: Go to the main page
