--- a/i18n/es.yaml
+++ b/i18n/es.yaml
@@ -26,3 +26,4 @@ minutesCount:
   other: "{{ . }} mins"
 articleImgAlt: Foto de portada para el artículo '{{ . }}'
 goBack: Ir a la página principal
+allTags: Todos los tags
