--- a/i18n/en.yaml
+++ b/i18n/en.yaml
@@ -16,6 +16,9 @@ photoCount:
 albumCount:
   one: "{{ .photoCount }} in {{ .count }} album"
   other: "{{ .photoCount }} in {{ .count }} albums"
+albumWithTagCount:
+  one: "{{ .count }} album tagged <span class='accent-color'>#{{ .tag }}<span>"
+  other: "{{ .count }} albums tagged <span class='accent-color'>#{{ .tag }}<span>"
 articleAboutMe: About me
 articleIndexContent: Content 
 articlesCount:
