--- a/i18n/es.yaml
+++ b/i18n/es.yaml
@@ -16,6 +16,9 @@ photoCount:
 albumCount:
   one: "{{ .photoCount }} en {{ .count }} álbum"
   other: "{{ .photoCount }} en {{ .count }} álbumes"
+albumWithTagCount:
+  one: "{{ .count }} álbum con la etiqueta <span class='accent-color'>#{{ .tag }}<span>"
+  other: "{{ .count }} álbumes con la etiqueta <span class='accent-color'>#{{ .tag }}<span>"
 articleAboutMe: Sobre mí
 articleIndexContent: Contenido
 articlesCount:
