--- a/i18n/es.yaml
+++ b/i18n/es.yaml
@@ -30,3 +30,5 @@ minutesCount:
 articleImgAlt: Foto de portada para el artículo '{{ . }}'
 goBack: Ir a la página principal
 allTags: Todos los tags
+switchTheme: Cambiar tema
+switchLanguage: Cambiar idioma
