copyright in the footer

--- a/i18n/en.yaml
+++ b/i18n/en.yaml
@@ -32,3 +32,4 @@ goBack: Go to the main page
 allTags: All tags
 switchTheme: Switch theme
 switchLanguage: Switch language
+allRightsReserved: All rights reserved
