--- a/i18n/es.yaml
+++ b/i18n/es.yaml
@@ -32,3 +32,4 @@ goBack: Ir a la página principal
 allTags: Todos los tags
 switchTheme: Cambiar tema
 switchLanguage: Cambiar idioma
+allRightsReserved: Todos los derechos reservados
