shows edit date if lastmod is different than the date

--- a/i18n/en.yaml
+++ b/i18n/en.yaml
@@ -33,3 +33,4 @@ allTags: All tags
 switchTheme: Switch theme
 switchLanguage: Switch language
 allRightsReserved: All rights reserved
+edited: Edited
