--- a/i18n/es.yaml
+++ b/i18n/es.yaml
@@ -33,3 +33,4 @@ allTags: Todos los tags
 switchTheme: Cambiar tema
 switchLanguage: Cambiar idioma
 allRightsReserved: Todos los derechos reservados
+edited: Editado
