--- a/i18n/en.yaml
+++ b/i18n/en.yaml
@@ -34,3 +34,4 @@ switchTheme: Switch theme
 switchLanguage: Switch language
 allRightsReserved: All rights reserved
 edited: Edited
+featuredArticles: Featured Articles
