--- a/i18n/es.yaml
+++ b/i18n/es.yaml
@@ -34,3 +34,4 @@ switchTheme: Cambiar tema
 switchLanguage: Cambiar idioma
 allRightsReserved: Todos los derechos reservados
 edited: Editado
+featuredArticles: Artículos destacados
