show "READ" ~button when no description provided

--- a/i18n/en.yaml
+++ b/i18n/en.yaml
@@ -35,3 +35,4 @@ switchLanguage: Switch language
 allRightsReserved: All rights reserved
 edited: Edited
 featuredArticles: Featured Articles
+read: Read
