--- a/i18n/es.yaml
+++ b/i18n/es.yaml
@@ -35,3 +35,4 @@ switchLanguage: Cambiar idioma
 allRightsReserved: Todos los derechos reservados
 edited: Editado
 featuredArticles: Artículos destacados
+read: Leer
