--- a/i18n/es.yaml
+++ b/i18n/es.yaml
@@ -42,5 +42,4 @@ read: Leer
 readingTime: Tiempo de lectura {{.}}
 privateArticleDescription: Artículo privado (solo es accesible a través de su URL)
 captionAudio: Reproductor de audio para escuchar el archivo '{{.title}}' del autor '{{.author}}'
-# underDevelopment: ⚠️ <u>ESTA **PÁGINA** ESTÁ **EN DESARROLLO**</u> ⚠️
-underDevelopment: ⚠️ <u>THIS **SITE** IS **UNDER DEVELOPMENT**</u> ⚠️
+underDevelopment: ⚠️ <u>ESTA **PÁGINA** ESTÁ **EN DESARROLLO**</u> ⚠️
