--- a/i18n/en.yaml
+++ b/i18n/en.yaml
@@ -42,4 +42,5 @@ read: Read
 readingTime: Reading time {{.}}
 privateArticleDescription: Private article (accessible only by its URL)
 captionAudio: Audio player to listen to the file '{{.title}}' by the author '{{.author}}'
+articleCoverImageAlt: Cover image for the article '{{.}}'
 underDevelopment: ⚠️ <u>THIS **SITE** IS **UNDER DEVELOPMENT**</u> ⚠️
