--- a/i18n/es.yaml
+++ b/i18n/es.yaml
@@ -42,4 +42,5 @@ read: Leer
 readingTime: Tiempo de lectura {{.}}
 privateArticleDescription: Artículo privado (solo es accesible a través de su URL)
 captionAudio: Reproductor de audio para escuchar el archivo '{{.title}}' del autor '{{.author}}'
+articleCoverImageAlt: Imagen de portada para el artículo '{{.}}'
 underDevelopment: ⚠️ <u>ESTA **PÁGINA** ESTÁ **EN DESARROLLO**</u> ⚠️
