--- a/i18n/es.yaml
+++ b/i18n/es.yaml
@@ -43,4 +43,5 @@ readingTime: Tiempo de lectura {{.}}
 privateArticleDescription: Artículo privado (solo es accesible a través de su URL)
 captionAudio: Reproductor de audio para escuchar el archivo '{{.title}}' del autor '{{.author}}'
 articleCoverImageAlt: Imagen de portada para el artículo '{{.}}'
+galleryCoverImageAlt: Imagen de portada para la galería de fotos '{{.}}'
 underDevelopment: ⚠️ <u>ESTA **PÁGINA** ESTÁ **EN DESARROLLO**</u> ⚠️
