--- a/i18n/en.yaml
+++ b/i18n/en.yaml
@@ -44,4 +44,6 @@ privateArticleDescription: Private article (accessible only by its URL)
 captionAudio: Audio player to listen to the file '{{.title}}' by the author '{{.author}}'
 articleCoverImageAlt: Cover image for the article '{{.}}'
 galleryCoverImageAlt: Cover image for the gallery '{{.}}'
+switchLang: Switch the language of the page
+goToIndex: Go to the main page
 underDevelopment: ⚠️ <u>THIS **SITE** IS **UNDER DEVELOPMENT**</u> ⚠️
